export interface BlogUser {
    _id: string;
    username: string;
    firstname: string;
    lastName: string;
    password: string;
    email: string;
}